--- a/src/component/media/audio/demo.html
+++ b/src/component/media/audio/demo.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="../../../base/_export.css" rel="stylesheet">
-  <link href="../../../layout/_export.css" rel="stylesheet">
-  <link href="../../../utility/_export.css" rel="stylesheet">
-  <link href="../../_export.css" rel="stylesheet">
-  <script src="../../../tool/js/random.min.js" defer></script>
-  <script src="../../../utility/helper/dev.js" defer></script>
   <title>audio</title>
+  <link href="../../../global.css" rel="stylesheet">
+  <link href="../../../utility/_export.css" rel="stylesheet">
+  <link href="../../form/_export.css" rel="stylesheet">
+  <link href="../../section/_export.css" rel="stylesheet">
+  <link href="audio.css" rel="stylesheet">
+  <script src="../../../utility/demo/dev.js" defer></script>
 </head>
 <body class="page">
   <div>
     <div class="code" data-name="audio[controls] source"></div>
     <div class="empty"></div>
     <audio controls autorun=false>
-      <source src="../../../asset/sample/39-kb.mp3" type="audio/mpeg">
+      <source src="../../../utility/demo/sample/audio.mp3" type="audio/mpeg">
       <source src="" type="audio/ogg">
       <p>Download:<br>
         <a href="file.mp3">MP3</a> or<br>
@@ -31,8 +31,8 @@
     <div class="empty"></div>
     <figure>
       <figcaption>Listen to the T-Rex:</figcaption>
-      <audio controls src="">
-        <a href="file.mp3"> Download audio </a>
+      <audio controls src="../../../utility/demo/sample/audio.mp3">
+        <a href="#!"> Download audio </a>
       </audio>
     </figure>
     <div class="empty"></div>
