--- a/src/component/media/embed/demo.html
+++ b/src/component/media/embed/demo.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="../../../base/_export.css" rel="stylesheet">
-  <link href="../../../layout/_export.css" rel="stylesheet">
+  <title>embed</title>
+  <link href="../../../global.css" rel="stylesheet">
   <link href="../../../utility/_export.css" rel="stylesheet">
-  <link href="../../_export.css" rel="stylesheet">
-  <script src="../../../tool/js/random.min.js" defer></script>
-  <script src="../../../utility/helper/dev.js" defer></script>
+  <link href="../../section/_export.css" rel="stylesheet">
+  <link href="embed.css" rel="stylesheet">
+  <script src="../../../utility/demo/dev.js" defer></script>
 </head>
 <body class="page">
   <div>
     <div class="code" data-name="embed[type=video/webm]"></div>
     <div class="empty"></div>
-    <embed type="video/webm" src="../../../asset/sample/flower.webm">
+    <embed type="video/webm" src="../../../utility/demo/sample/video.webm">
     <div class="empty"></div>
   </div>
   <div>
@@ -22,7 +22,7 @@
     <div class="empty"></div>
     <figure>
       <figcaption>PDF</figcaption>
-      <embed type="application/pdf" src="../../../asset/sample/In-CC0.pdf">
+      <embed type="application/pdf" src="../../../utility/demo/sample/file.pdf">
     </figure>
     <div class="empty"></div>
   </div>
