--- a/src/component/media/img/demo.html
+++ b/src/component/media/img/demo.html
@@ -3,27 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="../../../base/_export.css" rel="stylesheet">
-  <link href="../../../layout/_export.css" rel="stylesheet">
+  <title>img</title>
+  <link href="../../../global.css" rel="stylesheet">
   <link href="../../../utility/_export.css" rel="stylesheet">
-  <link href="../../_export.css" rel="stylesheet">
-  <script src="../../../tool/js/random.min.js" defer></script>
-  <script src="../../../utility/helper/dev.js" defer></script>
+  <link href="../../section/_export.css" rel="stylesheet">
+  <link href="img.css" rel="stylesheet">
+  <script src="../../../utility/demo/dev.js" defer></script>
 </head>
 <body class="page">
-  
   <div>
     <div class="code" data-name="img[alt][title]"></div>
     <div class="empty"></div>
-    <img src="../../../asset/sample/96x96.png" width="96" height="96" alt="Image sample 96x96 px" title="Image sample&#10;size 96x96px">
+    <img src="../../../utility/demo/sample/image.jpg" alt="Image sample 300x300 px" title="Image sample&#10;size 300x300 px">
     <div class="empty"></div>
   </div>
   <div>
     <div class="code" data-name="figure figcaption + img"></div>
     <div class="empty"></div>
     <figure>
-      <figcaption>The image:</figcaption>
-      <img src="../../../asset/sample/96x96.png" width="96" height="96" alt="Image sample 96x96 px" title="Image sample&#10;size 96x96px">
+      <figcaption>jpg</figcaption>
+      <img src="../../../utility/demo/sample/image.jpg">
+    </figure>
+    <div class="empty"></div>
+  </div>
+  <div>
+    <div class="code" data-name="(svg) img[width][height]"></div>
+    <div class="empty"></div>
+    <figure>
+      <figcaption>svg</figcaption>
+      <img src="../../../utility/demo/sample/image.svg" width="200" height="200">
     </figure>
     <div class="empty"></div>
   </div>
