--- a/src/component/media/object/demo.html
+++ b/src/component/media/object/demo.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="../../../base/_export.css" rel="stylesheet">
-  <link href="../../../layout/_export.css" rel="stylesheet">
+  <title>object</title>
+  <link href="../../../global.css" rel="stylesheet">
   <link href="../../../utility/_export.css" rel="stylesheet">
-  <link href="../../_export.css" rel="stylesheet">
-  <script src="../../../tool/js/random.min.js" defer></script>
-  <script src="../../../utility/helper/dev.js" defer></script>
+  <link href="../../section/_export.css" rel="stylesheet">
+  <link href="object.css" rel="stylesheet">
+  <script src="../../../utility/demo/dev.js" defer></script>
 </head>
 <body class="page">
   <div>
@@ -16,7 +16,16 @@
     <div class="empty"></div>
     <figure>
       <figcaption>PDF</figcaption>
-      <object type="application/pdf" data="../../../asset/sample/In-CC0.pdf"></object>
+      <object type="application/pdf" data="../../../utility/demo/sample/file.pdf"></object>
+    </figure>
+    <div class="empty"></div>
+  </div>
+  <div>
+    <div class="code" data-name="figure object[type=text/html]"></div>
+    <div class="empty"></div>
+    <figure>
+      <figcaption>PDF</figcaption>
+      <object type="text/html" data="../../../utility/demo/sample/example.html"></object>
     </figure>
     <div class="empty"></div>
   </div>
