--- a/src/component/media/picture/demo.html
+++ b/src/component/media/picture/demo.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="../../../base/_export.css" rel="stylesheet">
-  <link href="../../../layout/_export.css" rel="stylesheet">
+  <title>picture</title>
+  <link href="../../../global.css" rel="stylesheet">
   <link href="../../../utility/_export.css" rel="stylesheet">
-  <link href="../../_export.css" rel="stylesheet">
-  <script src="../../../tool/js/random.min.js" defer></script>
-  <script src="../../../utility/helper/dev.js" defer></script>
+  <link href="../../section/_export.css" rel="stylesheet">
+  <link href="picture.css" rel="stylesheet">
+  <script src="../../../utility/demo/dev.js" defer></script>
 </head>
 <body class="page">
   
@@ -16,8 +16,8 @@
     <div class="code" data-name="picture source[srcset][media] img"></div>
     <div class="empty"></div>
     <picture>
-      <source srcset="../../../asset/sample/128x128.png" media="(orientation: portrait)" />
-      <img src="../../../asset/sample/640x480.png" />
+      <source srcset="../../../utility/demo/sample/128x128.png" media="(orientation: portrait)" />
+      <img src="../../../utility/demo/sample/640x480.png" />
     </picture>
     <div class="empty"></div>
   </div>
@@ -27,8 +27,8 @@
     <figure>
       <figcaption>Picture</figcaption>
       <picture>
-        <source srcset="../../../asset/sample/128x128.png" media="(orientation: portrait)" />
-        <img src="../../../asset/sample/640x480.png" />
+        <source srcset="../../../utility/demo/sample/128x128.png" media="(orientation: portrait)" />
+        <img src="../../../utility/demo/sample/640x480.png" />
       </picture>
     </figure>
     <div class="empty"></div>
