--- a/src/component/media/audio/audio.css
+++ b/src/component/media/audio/audio.css
@@ -1,17 +1,14 @@
 /*Note: internal background cannot be change in chrome
     consider other control follow that color
 */
-
 audio {
-  --audio_width: 300px;
-  --audio_height: 36px;
   display: block;
   width: var(--audio_width);
-  height: var(--audio_height);
+  height: var(--input_height);
   @supports(-webkit-appearance:none) {
-    background-color: #f1f3f4;
-    border: 1px solid #767676;
-    border-radius: 2px;
+    background-color: var(--input_color-face);
+    border: 1px solid var(--input_color-border);
+    border-radius: var(--input_radius);
     @supports(-moz-appearance:none) {
       border: none;
     }
