--- a/src/component/media/embed/embed.css
+++ b/src/component/media/embed/embed.css
@@ -1,13 +1,7 @@
 embed {
-  --embed_width: -webkit-fill-available;
-  --embed_height: revert-layer;
-  /* override */
   display: block;
   max-inline-size: 100%;
-  /*block-size: auto;*/
-  /* style */
-  width: var(--embed_width);
-  height: var(--embed_height);
+  block-size: auto;
   object-fit: cover;
   object-position: center;
   &[type="application/pdf"] {
