--- a/src/component/media/iframe/demo.html
+++ b/src/component/media/iframe/demo.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="../../../base/_export.css" rel="stylesheet">
-  <link href="../../../layout/_export.css" rel="stylesheet">
+  <title>iframe</title>
+  <link href="../../../global.css" rel="stylesheet">
   <link href="../../../utility/_export.css" rel="stylesheet">
-  <link href="../../_export.css" rel="stylesheet">
-  <script src="../../../tool/js/random.min.js" defer></script>
-  <script src="../../../utility/helper/dev.js" defer></script>
+  <link href="../../section/_export.css" rel="stylesheet">
+  <link href="iframe.css" rel="stylesheet">
+  <script src="../../../utility/demo/dev.js" defer></script>
 </head>
 <body class="page">
   <div>
@@ -33,9 +33,15 @@
     <div class="empty"></div>
   </div>
   <div>
+    <div class="code" data-name="iframe[width][height]"></div>
+    <div class="empty"></div>
+    <iframe width="500" height="300" src="../../../utility/demo/sample/example.html"></iframe>
+    <div class="empty"></div>
+  </div>
+  <div>
     <div class="code" data-name="iframe [src*=https]"></div>
     <div class="empty"></div>
-    <iframe height=300 src="https://www.openstreetmap.org/export/embed.html?bbox=-0.004017949104309083%2C51.47612752641776%2C0.00030577182769775396%2C51.478569861898606&layer=mapnik"></iframe>
+    <iframe src="https://www.openstreetmap.org/export/embed.html?bbox=-0.004017949104309083%2C51.47612752641776%2C0.00030577182769775396%2C51.478569861898606&layer=mapnik"></iframe>
     <div class="empty"></div>
   </div>
 </body>
