--- a/src/component/media/svg/demo.html
+++ b/src/component/media/svg/demo.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="../../../base/_export.css" rel="stylesheet">
-  <link href="../../../layout/_export.css" rel="stylesheet">
+  <title>svg</title>
+  <link href="../../../global.css" rel="stylesheet">
   <link href="../../../utility/_export.css" rel="stylesheet">
-  <link href="../../_export.css" rel="stylesheet">
-  <script src="../../../tool/js/random.min.js" defer></script>
-  <script src="../../../utility/helper/dev.js" defer></script>
+  <link href="../../section/_export.css" rel="stylesheet">
+  <link href="svg.css" rel="stylesheet">
+  <script src="../../../utility/demo/dev.js" defer></script>
 </head>
 <body class="page">
   
