--- a/src/component/trigger/aside/demo.html
+++ b/src/component/trigger/aside/demo.html
@@ -20,14 +20,20 @@
     </div>
     <div class="empty"></div>
   </div>
-    <div>
+  <div>
     <div class="code" data-name="main aside > nav"></div>
     <div class="empty"></div>
     <main>
+      <h1>Heading 1</h1>
+      <p>Content section</p>
+      <section>
+        <h2>Heading 2</h2>
+        <p>Content section</p>
+      </section>
       <aside>
         <header><h4>Heading 4</h4></header>
         <hr>
-        <nav>
+        <!--<nav>-->
           <ul>
             <li>List item 1</li>
             <li>List item 2
@@ -39,14 +45,8 @@
             </li>
             <li>List item 3</li>
           </ul>
-        </nav>
+        <!--</nav>-->
       </aside>
-      <h1>Heading 1</h1>
-      <p>Content section</p>
-      <section>
-        <h2>Heading 2</h2>
-        <p>Content section</p>
-      </section>
     </main>
     <div class="empty"></div>
   </div>
