Add build for many

--- a/src/component/table/table/simulator.html
+++ b/src/component/table/table/simulator.html
@@ -12,7 +12,7 @@
 <body class="page">
 <div id="div"></div>
 <script>
-  const demo_path = 'component/table/demo.html'
+  const demo_path = 'component/table/table/demo.html'
   const sim_path = '../../utility/demo/simulator/'
   const sim_size = [
     'xx-small',
