--- a/src/component/table/table/demo.html
+++ b/src/component/table/table/demo.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>table</title>
-  <link href="../../global.css" rel="stylesheet">
-  <link href="../../utility/_export.css" rel="stylesheet">
-  <link href="../trigger/details-summary/details-summary.css" rel="stylesheet">
+  <link href="../../../global.css" rel="stylesheet">
+  <link href="../../../utility/_export.css" rel="stylesheet">
+  <link href="../../trigger/details-summary/details-summary.css" rel="stylesheet">
   <link href="table.css" rel="stylesheet">
-  <script src="../../utility/demo/dev.js" defer></script>
+  <script src="../../../utility/demo/dev.js" defer></script>
 </head>
 <body class="page">
   <div>
