--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,4 +1,4 @@
-<link rel="shortcut icon" type="image/x-icon" href="/repo-template-web/favicon.ico">
+<link rel="shortcut icon" type="image/x-icon" href="/css-initial/favicon.ico">
 <style>
 /** -- fix
   */
