--- a/src/component/trigger/aside/aside.css
+++ b/src/component/trigger/aside/aside.css
@@ -1,27 +1,21 @@
+:has(>aside) {
+  padding-top: var(--aside-toggle_size);
+  min-height: var(--aside-toggle_size);
+}
 aside {
-  --aside-postion_top: 10px;
-  --aside-postion_right: 25px;
-  --aside-postion_bottom: unset;
-  --aside-postion_left: unset;
-  --aside-toggle_size: 36px;
-  position: fixed;
+  position: absolute;
   top: var(--aside-postion_top);
   right: var(--aside-postion_right);
   bottom: var(--aside-postion_bottom);
   left: var(--aside-postion_left);
   min-height: var(--aside-toggle_size);
   min-width: var(--aside-toggle_size);
-  height: var(--aside-toggle_size);
-  width: var(--aside-toggle_size);
   background-color: #fff;
   color: #000;
-  border: 1px solid var(--color-border_layout);
   padding: var(--padding-layout);
-  overflow: hidden;
-  z-index: 98;
   visibility: hidden;
   &::after {
-    position: fixed;
+    position: absolute;
     top: var(--aside-postion_top);
     right: var(--aside-postion_right);
     bottom: var(--aside-postion_bottom);
@@ -34,7 +28,6 @@ aside {
     background-color: whitesmoke;
     border: 1px solid var(--color-border_layout);
     visibility: visible;
-    z-index: 99;
   }
   &:hover::after {
     display: none;
@@ -44,16 +37,13 @@ aside {
     min-width: 250px;
     max-width: 70vw;
     max-height: 80vh;
-    width: auto;
-    height: auto;
     overflow: auto;
     white-space: nowrap;
-  }
-  @media screen and (max-width: 768px) {
-    --aside-postion_top: 10px;
-    --aside-postion_right: 10px;
-    --aside-postion_bottom: unset;
-    --aside-postion_left: unset;
-    --aside-toggle_size: 36px;
+    z-index: 999;
+    border: 1px solid var(--color-border_layout);
+    &:has(>nav) {
+      border: none;
+      padding: 0;
+    }
   }
 }
